--- a/app/src/main/res/menu/menu_note.xml
+++ b/app/src/main/res/menu/menu_note.xml
@@ -3,11 +3,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.ol4juwon.notekeeper.NoteActivity">
     <item
-        android:id="@+id/action_send_mail"
+        android:id="@+id/action_next"
+        android:icon="@android:drawable/ic_media_next"
         android:orderInCategory="100"
+        android:title="Next"
+        app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/action_send_mail"
+        android:orderInCategory="101"
         android:title="Send as Email"
         app:showAsAction="never" />
     <item
         android:id="@+id/action_cancel"
-        android:title="Cancel" />
+        android:icon="@android:drawable/ic_menu_revert"
+        android:title="Cancel"
+        app:showAsAction="ifRoom" />
 </menu>
