previous note option menu item added

--- a/app/src/main/res/menu/menu_note.xml
+++ b/app/src/main/res/menu/menu_note.xml
@@ -3,11 +3,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.ol4juwon.notekeeper.NoteActivity">
     <item
+        android:id="@+id/action_previous"
+        android:icon="@android:drawable/ic_media_previous"
+        android:orderInCategory="100"
+        android:title="Previous"
+        app:showAsAction="always" />
+    <item
         android:id="@+id/action_next"
         android:icon="@android:drawable/ic_media_next"
-        android:orderInCategory="100"
+        android:orderInCategory="101"
         android:title="Next"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="always" />
     <item
         android:id="@+id/action_send_mail"
         android:orderInCategory="101"
