previous note option menu item added

--- a/app/src/main/res/layout/content_note.xml
+++ b/app/src/main/res/layout/content_note.xml
@@ -22,8 +22,11 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
+        android:autofillHints=""
+        android:backgroundTint="@color/pluralsight_orange"
         android:ems="10"
         android:gravity="start|top"
+        android:hint="@string/note_title"
         android:inputType="textMultiLine"
         app:layout_constraintEnd_toEndOf="@+id/spinner_courses"
         app:layout_constraintStart_toStartOf="@+id/spinner_courses"
@@ -34,9 +37,14 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
+        android:autofillHints=""
+        android:backgroundTint="@color/pluralsight_orange"
         android:ems="10"
         android:gravity="start|top"
+        android:hint="@string/note_text"
         android:inputType="textMultiLine"
+        android:textColorHighlight="@color/pluralsight_orange"
+        android:textColorLink="@color/pluralsight_orange"
         app:layout_constraintEnd_toEndOf="@+id/text_note_title"
         app:layout_constraintStart_toStartOf="@+id/text_note_title"
         app:layout_constraintTop_toBottomOf="@+id/text_note_title" />
