--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     tools:showIn="navigation_view">
@@ -6,15 +7,19 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_notes"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="Notes" />
+            android:icon="@drawable/ic_baseline_assignment_24"
+            android:title="@string/notes" />
         <item
             android:id="@+id/nav_courses"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="Courses" />
+            android:icon="@drawable/ic_menu_slideshow"
+            android:title="@string/courses" />
         <item
             android:id="@+id/nav_share"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="Share" />
+            android:icon="@android:drawable/ic_menu_share"
+            android:title="@string/share" />
+        <item
+            android:id="@+id/nav_send"
+            android:icon="@android:drawable/ic_menu_send"
+            android:title="@string/send" />
     </group>
 </menu>
