previous note option menu item added

--- a/app/src/main/res/menu/menu_note.xml
+++ b/app/src/main/res/menu/menu_note.xml
@@ -7,12 +7,14 @@
         android:icon="@android:drawable/ic_media_previous"
         android:orderInCategory="100"
         android:title="Previous"
+        android:visible="false"
         app:showAsAction="always" />
     <item
         android:id="@+id/action_next"
         android:icon="@android:drawable/ic_media_next"
         android:orderInCategory="101"
         android:title="Next"
+        android:visible="false"
         app:showAsAction="always" />
     <item
         android:id="@+id/action_send_mail"
